razor pay
