# api.yaml
@@ -547,6 +547,33 @@ paths:
         '500':
           description: Internal Server Error OR authorization header must be provided
 
+  /api/v1/member/add_wallet_order:
+    post:
+      summary: add_wallet_order
+      tags:
+        - wallets
+      requestBody:
+        content:
+          application/json:
+             schema:
+               type: object
+               properties:
+                 amount:
+                   type: string
+                   minLength: 1
+                   description: Amount to add
+               required:
+                 - amount
+      security:
+       - BearerAuth: []
+      responses:
+        '200':
+         description: OK
+        '400':
+         description: Bad Request
+        '500':
+         description: Internal Server Error OR authorization header must be provided.
+
   /api/v1/member/get_wallet_balance:
       post:
         summary: Return wallet balance.
@@ -1208,7 +1235,43 @@ paths:
         '200':
           description: OK
      
- 
+  /api/v1/member/razor_verify_auth:
+    post:
+      summary: razor_verify_auth
+      tags:
+        - wallets
+      requestBody:
+        content:
+          application/json:
+             schema:
+               type: object
+               properties:
+                razorpay_payment_id:
+                  type: string
+                  minLength: 1
+                  description: razorpay_payment_id.
+                razorpay_order_id:
+                  type: string
+                  minLength: 1
+                  description: razorpay_order_id.
+                razorpay_signature:
+                  type: string
+                  minLength: 1
+                  description: razorpay_signature.
+               required:
+                 - razorpay_payment_id
+                 - razorpay_order_id
+                 - razorpay_signature
+      security:
+       - BearerAuth: []
+      responses:
+        '200':
+         description: OK
+        '400':
+         description: Bad Request
+        '500':
+         description: Internal Server Error OR authorization header must be provided.
+  
 
 
 
